assets/css/style.css
/* fonts imoported from Google Fonts -- */
@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto+Condensed:wght@300&display=swap");

/* CSS grid -------------------------- */
/* 
  This is how my grid works:
    grid-template-rows auto-gerenerates a row for each section of the website. 
    The rows generated will have a minimum height of 100px and a maximum height 
    of 1 fraction of what ever the total height of all rows combined is. 
    
    All rows represents a section of the website that is specified in the grid-template-areas.
    By doing it this way, you could easily add new sections to the website in the future,
    and also change order of the exisiting sections using CSS. 
    It also removes the need for additional divs in index.html
  */

.main-grid {
  display: grid;
  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));

  /* If you want to add a new section to the grid, simply specify it here,
  then declair that section with the grid-area attribute. Read more here: https://developer.mozilla.org/en-US/docs/Web/CSS/grid-area */
  grid-template-areas:
    "header"
    "about"
    "benefits"
    "join"
    "footer";
}

/* general styling ------------------- */

* {
  margin: 0;
}

html {
  scroll-behavior: smooth;
  background-color: #927397;
}

h1,
h2,
h3,
h4,
h5,
h6,
legend {
  font-family: "Fredoka One", cursive;
  color: #927397;
}

p,
a,
label {
  font-family: "Roboto Condensed", helvetica, sans-serif;
}

p a {
  color: #fa0356;
}

p a:visited {
  color: #572f5e;
}

b {
  color: #572f5e;
}

ul {
  padding: 0;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

fieldset {
  padding: 2em;
  border: none;
}

legend {
  text-align: center;
  font-size: 1.5em;
  margin: 1em auto;
  display: block;
  float: left;
}

iframe {
  height: 200px;
  width: 340px;
  border: none !important;
}

/* reusable classes ------------------------------ */

.hidden {
  position: absolute;
  top: -600px;
  left: -50px;

  /* since backgrond color of the entire website is purple, hidden labels 
  gets a black color here to remove contrast errors in WAVE accessibility tester 
  which avoids confusion. 
  (Note: this does not do any _real_ diffrenece, but removes two errors in the validator) */
  background-color: white !important;
  color: black !important;
}

.overflow {
  overflow: hidden;
}
.container {
  margin: auto;
  max-width: 1000px;
}

.flex-box {
  display: flex;
  justify-content: center;
  align-items: center;
}

.text-box {
  border: 1px solid white;
  background-color: rgba(240, 240, 240, 0.932);
  box-sizing: border-box;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  padding: 2em;
  width: 15em;
  margin: auto;
}

.card h2,
h3,
h4,
h5,
h6 {
  font-family: helvetica;
  color: white;
}

.text-box > h1,
h2,
h3,
p,
a {
  margin: 1em 0.1em;
}

.center {
  text-align: center;
}

.btn {
  display: block;
  background-color: #412a44 !important;
  color: white;
  padding: 0.3em 1em;
  font-size: 1.4em;
  border-radius: 20px;
  transition: all ease 0.4s;
  font-family: Arial, Helvetica, sans-serif;
}

.btn:hover {
  box-shadow: #c9c9c9 2px 10px 10px 2px;
  background-color: #ce98aa !important;
  color: white;
}

.btn:active {
  box-shadow: none;
}

input[type="submit"].btn {
  border: 0;
}

details summary.btn {
  width: 150px;
  border-radius: 30px;
  margin: auto;
  font-size: 1.2em !important;
  padding: 0.8em;
  font-size: 1em;
  color: white;
  cursor: pointer;
}

.paycard {
  margin: 0.7em 0.5em 2em;
}

.valid-card {
  font-size: 1.8em;
  color: #521a5a;
}

/* header section --------------------------------- */

header {
  grid-area: header;
  height: 640px;
  background: url(../img/AdobeStock_330497250_mirrored_rezised.webp) bottom
    center;
  box-shadow: inset rgba(48, 14, 58, 0.486) 0 1000px;
  background-size: cover;

  background-color: #927397;
}

/* header > nav */

.navbar {
  /* this creates the navbar from a span tag that can disapear 
  when checkbox is checked without affecting other elements */
  position: fixed;
  background-color: rgba(255, 255, 255, 0.76);
  width: 100%;
  height: 4rem;
  z-index: 3;
  position: fixed;
  box-shadow: rgba(128, 128, 128, 0.24) 0px 1px 2px;
}

#main-nav {
  z-index: 4;
}

/*
Credits:
  below is where the mobile navigation menu is created. 
  many lines of the code is taken from here:
  https://codepen.io/alvarotrigo/pen/wvrzPWL 
*/

.hamburger-lines {
  display: flex;
  height: 2em;
  width: 2.44em;
  flex-direction: column;
  justify-content: space-between;
  position: fixed;
  left: 12px;
  top: 13px;
  z-index: 5;
}

.nav-container > .checkbox {
  height: 3.3rem;
  width: 3.3em;
  position: fixed;
  left: 9px;
  top: 4px;
  z-index: 6;
  opacity: 0;
  cursor: pointer;
}

.hamburger-lines > .line {
  display: block;
  background-color: #521a5a;
  height: 5px;
  width: 100%;
  border-radius: 12px;
}

.hamburger-lines .line1 {
  transform-origin: 0% 0%;
  transition: transform 0.4s ease-in-out;
}

.nav-container .hamburger-lines .line2 {
  transition: transform 0.2s ease-in-out;
}

.hamburger-lines .line3 {
  transform-origin: 0% 100%;
  transition: transform 0.4s ease-in-out;
}

.menu-items {
  background-color: rgba(255, 255, 255, 0.575);
  padding-top: 1em;
  height: 100vh;
  width: 50%;
  transform: translatex(-150%);
  display: flex;
  flex-direction: column;
  margin-left: -40px;
  padding-left: 50px;
  transition: transform 0.4s ease-in-out;
  text-align: center;
  position: fixed;
  box-shadow: rgba(70, 70, 70, 0.7) 1px 4px 8px;
}

.menu-items li {
  margin-bottom: 1.2rem;
  font-size: 1.5rem;
  font-weight: 500;
}

.nav-container input[type="checkbox"]:checked ~ .menu-items {
  transform: translateX(0);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
  transform: rotate(45deg);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
  transform: scaleY(0);
}
/* ... */

